# goit-pythonweb-hw-06

./: db.py  models.py  my_select.py  pyproject.toml  seed.py
migrations/: env.py
migrations/versions/: 815fae188b5d_initial_migration.py
